sbin_PROGRAMS = wrapsix-dnsproxy wrapsix-wrapper
wrapsix_dnsproxy_SOURCES = dnsproxy.c
wrapsix_wrapper_SOURCES = \
			  arp.c arp.h \
			  checksum.c checksum.h \
			  ethernet.h \
			  icmp.c icmp.h \
			  ipv4.c ipv4.h \
			  ipv6.c ipv6.h \
			  log.c log.h \
			  nat.c nat.h \
			  radixtree.c radixtree.h \
			  tcp.c tcp.h \
			  transmitter.c transmitter.h \
			  udp.c udp.h \
			  wrapper.c wrapper.h
