sbin_PROGRAMS = wrapsix
wrapsix_SOURCES = \
		  arp.c arp.h \
		  autoconfig.h \
		  checksum.c checksum.h \
		  config.c config.h \
		  ethernet.h \
		  icmp.c icmp.h \
		  ipv4.c ipv4.h \
		  ipv6.c ipv6.h \
		  linkedlist.c linkedlist.h \
		  log.c log.h \
		  nat.c nat.h \
		  radixtree.c radixtree.h \
		  tcp.c tcp.h \
		  transmitter.c transmitter.h \
		  udp.c udp.h \
		  wrapper.c wrapper.h

autoconfig.h:
	sed -e 's|--sysconfdir--|$(sysconfdir)|' autoconfig.h.in > autoconfig.h
